# Rust-Learning-Rendering

./: Cargo.toml  README.md
examples/clear-color/: main.rs
examples/hello-traingle-translation/: main.rs
examples/hello-triangle/: main.rs
examples/hello-triangle-matrix-translation/: main.rs
examples/hello-triangle-texture/: main.rs
examples/hello-triangle-translation/: main.rs
image/: ReadMe.txt
model/FTPG_Makarov/: Makarov.mtl
model/RubyRose/: SMITE_Thanatos_RubyRose.dae  untitled.mtl
model/SRT_Damon/: Damon.fbx  dragon.mtl  readme.txt
shader/doc-test/: doc-test.vert
shader/matrix-triangle/: matrix-triangle.frag  matrix-triangle.vert
shader/model/: model.frag  model.vert
shader/moving-triangle/: moving-triangle.vert
shader/texture/: texture.frag  texture.vert
shader/triangle/: triangle.vert
src/: main.rs
util-lib/src/: core.rs  lib.rs  material.rs  math.rs  model.rs  prelude.rs  shader.rs  texture.rs  vertex.rs
util/src/: lib.rs
