[package]
name = "getting_started"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
superluminal-perf = "*"



[profile.release]
lto = true
codegen-unit = 1
debug = true
opt-level = 3

[lib]
name = "util"
path = "util-lib/src/lib.rs"



[[example]]
name = "clear-color"
path = "examples/clear-color/main.rs"

[[example]]
name = "hello-triangle"
path = "examples/hello-triangle/main.rs"